# openfootmanager

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  ToDo.md  pyproject.toml  run.py  setup.cfg
.claude/: settings.json
.claude/agents/: code-reviewer.md  doc-writer.md  implementer.md  security-auditor.md  team-coordinator.md  tester.md
.claude/hooks/: post-tool-use.sh  pre-tool-use.sh  session-start.sh  stop.sh
docs/source/: api.rst  architecture.rst  conf.py  getting_started.rst  index.rst  modding.rst
ofm/: defaults.py  ofm.py
ofm/core/: __init__.py  accessibility.py  benchmarking.py  career_mode.py  community.py  database.py  game_state.py  i18n.py  interactions.py  migration.py  mod_support.py  modding_extended.py  mods.py  packaging.py  performance.py  screen_reader.py  settings.py  ui_systems.py
ofm/core/db/: database.py  expanded_db.py  generators.py
ofm/core/football/: career.py  club.py  competitions.py  finances.py  formation.py  injury.py  interactions.py  league.py  loans.py  manager.py  player.py  player_attributes.py  playercontract.py  positions.py  roster.py  team_simulation.py  training.py  transfer_market.py  youth.py
ofm/core/simulation/: __init__.py  advanced.py  commentary.py  event.py  event_type.py  fixture.py  game_state.py  live_game_manager.py  match_visuals.py  simulation.py  team_strategy.py  (+1 more)
ofm/res/: names.json
ofm/tests/: conftest.py  test_corner_kick_event.py  test_cross_event.py  test_db.py  test_dribble_event.py  test_formation.py  test_foul_event.py  test_free_kick_event.py  test_milestones.py  test_new_systems.py  test_ofm.py  test_pass_event.py  test_player.py  test_settings.py  test_shot_events.py  test_simulation.py  test_stats_explorer.py  test_substitutions.py  test_teams.py
ofm/ui/: gui.py  table.py
scripts/: auto-dream.sh  setup.sh  verify.sh
skills/: assemble-team.md  fix-issue.md  refactor-module.md  review-pr.md  tdd-loop.md
(+74 files in other folders)
