[tool.poetry]
name = "openfootmanager"
version = "0.1.0"
description = "A free and open source football manager game."
authors = ["sturdy-robot <pedrenriquegg@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ttkbootstrap = "^1.10.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
hypothesis = "^6.104.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
sphinx = "^7.3.7"
pygments = "^2.18.0"
docutils = "^0.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
